[project]
name = "inu_net"
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "Jordon Scott", email = "jordonsc@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "textual >= 0.1.0",
    "esptool >= 3.0.0",
    "mpremote >= 0.1.0",
    "aiohttp >= 3.7.4",
    "aiofiles >= 0.6.0",
    "gcloud >= 0.18.3",
    "requests >= 2.25.1",
    "homeassistant >= 2021.6.6",
    "voluptuous >= 0.12.1",
    "boto3 >= 1.17.104",
    "botocore >= 1.20.104"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['inu_net']

[tool.setuptools.package-data]
inu_net = ['src/inu/*']
